--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <option value="2">Console.log</option>
         </select>
         <br>
-        <label for="tinggi">Masukan tinggi Segitiga</label>
+        <label for="tinggi">Masukan tinggi Bentuk</label>
         <input type="number" name="tinggi" id="tinggi">
         <input type="submit" value="Tampilkan Bintang" onclick="tampil()">
       </form>
